# vman

./: .env.example  .gitignore  .gitleaks.toml  README.md  alembic.ini  package.json  pyproject.toml
.github/workflows/: ci.yml  security.yml
backend/vman/: __init__.py  config.py  main.py  worker.py
backend/vman/api/: __init__.py  deps.py  routes_agents.py  routes_audit.py  routes_auth.py  routes_hosts.py  routes_jobs.py  routes_logs.py  routes_recipes.py  routes_settings.py  routes_terminal.py  routes_vault.py
backend/vman/cli/: main.py
backend/vman/db/: __init__.py  base.py  models.py  session.py
backend/vman/db/migrations/: __init__.py  env.py
backend/vman/mcp/: __init__.py  server.py
backend/vman/recipes/builtin/: add-swap.yaml  basic-hardening.yaml  change-ssh-port.yaml  check-failed-services.yaml  create-sudo-user.yaml  disable-password-login.yaml  disk-usage.yaml  healthcheck.yaml  install-9router.yaml  install-caddy.yaml  install-cloudflare-tunnel.yaml  install-docker.yaml  install-nginx.yaml  install-nodejs.yaml  install-open-terminal.yaml  install-openwebui.yaml  install-python-uv.yaml  (+9 more)
backend/vman/schemas/: __init__.py  agents.py  auth.py  credentials.py  hosts.py
backend/vman/security/: __init__.py  audit.py  auth.py  crypto.py  csrf.py  host_keys.py  policy.py  redaction.py
backend/vman/services/: __init__.py  backup.py  events.py  hosts.py  jobs.py  os_detection.py  recipe_engine.py  ssh_runner.py  vault.py  worker.py
docs/: architecture.md  deployment.md  mcp-integration.md  recipes.md  release-checklist.md  security.md
frontend/: README.md  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
frontend/src/: main.tsx
frontend/src/app/: App.tsx  AppShell.tsx
frontend/src/lib/: api.test.ts  api.ts  cn.ts  credentialsApi.ts  hosts.test.ts  hosts.ts  hostsApi.test.ts  hostsApi.ts  jobs.test.ts  jobs.ts  jobsApi.test.ts  jobsApi.ts  recipes.test.ts  recipes.ts  recipesApi.test.ts  recipesApi.ts
frontend/src/pages/: AgentBridgePage.tsx  AuditPage.tsx  AuthPages.tsx  CredentialsPage.tsx  ErrorPages.tsx  HostFormPage.tsx  HostTopology.tsx  HostsDetailPage.tsx  HostsListPage.tsx  JobDetailPage.tsx  JobsListPage.tsx  LogsPage.tsx  OverviewPage.tsx  RecipeDetailPage.tsx  RecipesListPage.tsx  SettingsPage.tsx  TerminalPage.tsx
frontend/src/styles/: globals.css
scripts/: add-vault-credential.py  generate-master-key.py  install-systemd.sh
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_agents_api.py  test_alembic_migrations.py  test_audit_api.py  test_auth_api.py  test_backup.py  test_builtin_recipe_pack.py  test_cli.py  test_csrf.py  test_healthcheck_recipe.py  test_hosts_api.py  test_jobs_api.py  test_jobs_sse.py  test_logs_api.py  test_mcp_tools.py  test_recipe_run.py  test_recipes_api.py  test_settings_api.py  test_ssh_runner_mocked.py  test_terminal_api.py
tests/unit/: test_audit.py  test_builtin_recipes.py  test_crypto.py  test_deployment_scripts.py  test_events.py  test_health.py  test_host_keys.py  test_models.py  test_os_detection.py  test_policy.py  test_recipe_schema.py  test_redaction.py  test_vault.py
(+18 files in other folders)
